--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">RControl</string>
     <string name="hello_world">Hello world!</string>
+    <string name="action_search_devices">Search Devices</string>
     <string name="action_settings">Settings</string>
 
 </resources>
